--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -60,7 +60,7 @@
     </a>
   </li>
   <li class="c-bannerList_node">
-    <a href="/patternorder">
+    <a href="/semi_order">
       <div class="c-bannerList_img">
         <img src="/samale-min.webp" alt="パターンオーダーの画像">
       </div>
