--- a/src/components/Pa3order.astro
+++ b/src/components/Pa3order.astro
@@ -75,8 +75,8 @@
                     <option value="シルバー">シルバー</option>                    
                 </select>
 
-                <label class="Home_Contact_Label__hwNpu" for="kanagu">*キーフック</label>
-                <select name="kanagu" class="form-control" required="required">
+                <label class="Home_Contact_Label__hwNpu" for="keyhook">*キーフック</label>
+                <select name="keyhook" class="form-control" required="required">
                     <option value="" disabled selected>選択してください</option>
                     <option value="ゴールド">ゴールド</option>
                     <option value="シルバー">シルバー</option>
@@ -110,8 +110,8 @@
                 </select>
 
 
-                <label class="Home_Contact_Label__hwNpu" for="kokuin">*刻印模様</label>
-                <select name="kokuin" class="form-control" required="required" >
+                <label class="Home_Contact_Label__hwNpu" for="kokuin">*刻印模様(希望の方)</label>
+                <select name="kokuin" class="form-control"  >
                     <option value="" disabled selected>選択してください</option>
                     <option value="有り">有り（中央ポケット）</option>
                     <option value="無し">無し</option>
@@ -119,7 +119,7 @@
                 </select>
 
                 <label class="Home_Contact_Label__hwNpu"  for="message">イニシャル刻印(&thinsp;希望の方 配置:中央ポケット&thinsp;)</label>
-                <textarea class="Home_Contact_Textarea__iUa5y" id="message" name="message" rows="5"  placeholder="12文字までをご記入ください.大小文字含むA~Z、数字2桁まで(０〜９、同数字不可:例22)、 記号【.＆】のみ"></textarea>
+                <textarea class="Home_Contact_Textarea__iUa5y" id="message" name="message" rows="5"  placeholder="12文字までをご記入ください。大小文字含むA~Z(*大文字は、2つまで。例:T.TTなど3つ場合は、不可)、数字2桁まで(０〜９、*同数字不可:例:22)、 記号【.＆】のみ"></textarea>
 
                 <button type="submit" class="Home_Contact_Button__sfQX_">送信する</button>
             </form>
