--- a/src/components/Pattern.astro
+++ b/src/components/Pattern.astro
@@ -40,7 +40,7 @@
         </dl>
         <dl>
         <dt>STEP - 4 <br class="sp">金具</dt>
-        <dd>それぞれの製品に使用される金具を選択していただきます。<br class="pc"><br class="sp"><br class="sp">【ホック】<br class="sp">&thinsp;ゴールド、アンティーク、シルバー<br class="pc"><br class="sp">【キーフック】<br class="sp">&thinsp;ゴールド、アンティーク、シルバー<br class="pc"><br class="sp">【リング】<br class="sp">&thinsp;ゴールド、シルバー<br class="pc"><br class="sp">【ファスナー】<br class="sp">&thinsp;ゴールド、アンティーク、シルバー </dd>
+        <dd>それぞれの製品に使用される金具を選択していただきます。<br class="pc"><br class="sp"><br class="sp">【ホック】<br class="sp">&thinsp;ゴールド、アンティーク、シルバー<br class="pc"><br class="sp">【キーフック】<br class="sp">&thinsp;ゴールド、アンティーク、シルバー<br class="pc"><br class="sp">【リング】<br class="sp">&thinsp;ゴールド、シルバー<br class="pc"><br class="sp">【ファスナーの引手と務歯】<br class="sp">&thinsp;ゴールド、アンティーク、シルバー </dd>
         </dl>
 
         <dl>
