--- a/src/pages/semi_order.astro
+++ b/src/pages/semi_order.astro
@@ -5,7 +5,7 @@ import { ViewTransitions } from 'astro:transitions';
 ---
 <ViewTransitions />
 
-<Layout title="パターンオーダーについて">
+<Layout title="セミオーダーについて">
   <main>
 
   </main>
