--- a/src/components/Pa1order.astro
+++ b/src/components/Pa1order.astro
@@ -3,7 +3,7 @@
         <div class="slider">
             <div class="slides">
                 <div id="slides__1" class="slide">
-                    <img loading="lazy" src="/keycase_En.webp" class="slide__img" alt="パターン">
+                    <img loading="lazy" src="/patternkey.webp" class="slide__img" alt="パターン">
                     <a class="slide__next" title="Next"></a>
                 </div>
                 <div id="slides__2" class="slide">
@@ -126,24 +126,24 @@
                     <option value="No.8ターコイズ">No.8&thinsp;ターコイズ</option>
                 </select>
 
-                <label class="Home_Contact_Label__hwNpu" for="kanagu_hook">*金具（&thinsp;キーフック&thinsp;）</label>
-                <select name="kanagu_hook" class="form-control" required="required">
+                <label class="Home_Contact_Label__hwNpu" for="keyhook">*金具（&thinsp;キーフック&thinsp;）</label>
+                <select name="keyhook" class="form-control" required="required">
                     <option value="" disabled selected>選択してください</option>
                     <option value="ゴールド">ゴールド</option>
                     <option value="シルバー">シルバー</option>
                     <option value="アンティーク">アンティーク</option>
                 </select>
 
-                <label class="Home_Contact_Label__hwNpu" for="kokuin">*刻印模様 (&thinsp;希望の方 配置:右ポケット&thinsp;)</label>
-                <select name="kokuin" class="form-control" required="required" >
+                <label class="Home_Contact_Label__hwNpu" for="kokuin">*刻印模様 (&thinsp;希望の方&thinsp;)</label>
+                <select name="kokuin" class="form-control" >
                     <option value="" disabled selected>選択してください</option>
-                    <option value="有り">有り</option>
+                    <option value="有り">有り(配置:右ポケット)</option>
                     <option value="無し">無し</option>
                 
                 </select>
 
                 <label class="Home_Contact_Label__hwNpu"  for="message">イニシャル刻印 (&thinsp;希望の方 配置:右ポケット&thinsp;)</label>
-                <textarea class="Home_Contact_Textarea__iUa5y" id="message" name="message" rows="5"  placeholder="12文字までをご記入ください.大小文字含むA~Z、数字2桁まで(０〜９、同数字不可:例22)、 記号【.＆】のみ"></textarea>
+                <textarea class="Home_Contact_Textarea__iUa5y" id="message" name="message" rows="5"  placeholder="12文字までをご記入ください。大小文字含むA~Z(*大文字は、2つまで。例:T.TTなど3つ場合は、不可)、数字2桁まで(０〜９、*同数字不可:例:22)、 記号【.＆】のみ"></textarea>
 
                 <button type="submit" class="Home_Contact_Button__sfQX_">送信する</button>
             </form>
