--- a/src/components/Pa2order.astro
+++ b/src/components/Pa2order.astro
@@ -132,14 +132,14 @@
                 <label class="Home_Contact_Label__hwNpu" for="kokuin">*刻印模様</label>
                 <select name="kokuin" class="form-control" required="required" >
                     <option value="" disabled selected>選択してください</option>
-                    <option value="有り">有り（配置ポケット1 右側）</option>
-                    <option value="有り">有り（配置ポケット2 左側）</option>
+                    <option value="有り">有り（配置:ポケット1 右側）</option>
+                    <option value="有り">有り（配置:ポケット2 左側）</option>
                     <option value="無し">無し</option>
                 
                 </select>
 
                 <label class="Home_Contact_Label__hwNpu"  for="message">イニシャル刻印(&thinsp;希望の方 配置:ポケット1 右側&thinsp;)</label>
-                <textarea class="Home_Contact_Textarea__iUa5y" id="message" name="message" rows="5"  placeholder="12文字までをご記入ください.大小文字含むA~Z、数字2桁まで(０〜９、同数字不可:例22)、 記号【.＆】のみ"></textarea>
+                <textarea class="Home_Contact_Textarea__iUa5y" id="message" name="message" rows="5"  placeholder="12文字までをご記入ください。大小文字含むA~Z(*大文字は、2つまで。例:T.TTなど3つ場合は、不可)、数字2桁まで(０〜９、*同数字不可:例:22)、 記号【.＆】のみ"></textarea>
 
                 <button type="submit" class="Home_Contact_Button__sfQX_">送信する</button>
             </form>
