--- a/src/components/Pa3.astro
+++ b/src/components/Pa3.astro
@@ -52,19 +52,19 @@
       
 
         <p class="bun">
-            革のパーツ・糸の色・金具のひとつひとつなど、細部にまでこだわれるのが、セミオーダーの醍醐味です。<br class="sp"><br class="sp">お客様の好みにあった組み合わせをぜひ見つけてください。<a href="https://pircamabui.com/patternorder/" class="animate-link" >詳細はこちらから<svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="#003EA2" viewBox="0 0 256 256"><path d="M132,136v64a12,12,0,0,1-24,0V165L48.49,224.49a12,12,0,0,1-17-17L91,148H56a12,12,0,0,1,0-24h64A12,12,0,0,1,132,136ZM208,28H80A20,20,0,0,0,60,48V92a12,12,0,0,0,24,0V52H204V172H164a12,12,0,0,0,0,24h44a20,20,0,0,0,20-20V48A20,20,0,0,0,208,28Z"></path></svg></a><br class="pc">
+            革のパーツ・糸の色・金具のひとつひとつなど、細部にまでこだわれるのが、セミオーダーの醍醐味です。<br class="sp"><br class="sp">お客様の好みにあった組み合わせをぜひ見つけてください。<a href="/semi_order" class="animate-link" >詳細はこちらから<svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="#003EA2" viewBox="0 0 256 256"><path d="M132,136v64a12,12,0,0,1-24,0V165L48.49,224.49a12,12,0,0,1-17-17L91,148H56a12,12,0,0,1,0-24h64A12,12,0,0,1,132,136ZM208,28H80A20,20,0,0,0,60,48V92a12,12,0,0,0,24,0V52H204V172H164a12,12,0,0,0,0,24h44a20,20,0,0,0,20-20V48A20,20,0,0,0,208,28Z"></path></svg></a><br class="pc">
             <br class="sp"><br class="sp"><br class="pc">お引き渡しについて、仕入れにかかる日数を加え、発送まで３、４週間程度お時間を頂いております。
             <a href="/leagal" class="animate-link" >詳細はこちらから<svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="#003EA2" viewBox="0 0 256 256"><path d="M132,136v64a12,12,0,0,1-24,0V165L48.49,224.49a12,12,0,0,1-17-17L91,148H56a12,12,0,0,1,0-24h64A12,12,0,0,1,132,136ZM208,28H80A20,20,0,0,0,60,48V92a12,12,0,0,0,24,0V52H204V172H164a12,12,0,0,0,0,24h44a20,20,0,0,0,20-20V48A20,20,0,0,0,208,28Z"></path></svg></a>
           
         </p>
-    </div>
+    </div> 
 </div>
 
 <div id="contact" class="con">
     <h1 class="Home_Contact_Title__KdAFZ">SELECT</h1>
     <main class="Layout_Main__dLHqI">
         <div class="Home_Contact__nbvJ6">
-            <p class="Home_Contact_Text__3D7zy">セミオーダーは以下のフォームよりお送りください。<br class="sp"><br>送信後、決算ページに移行します。<br class="sp"><span class="stripe-marker">カート名：パターンオーダーをご選択します。</span><br class="sp"><br class="pc"><span class="kome">※</span>は必須項目です</p>
+            <p class="Home_Contact_Text__3D7zy">セミオーダーは以下のフォームよりお送りください。<br class="sp"><br>送信後、決算ページに移行します。<br class="sp"><span class="stripe-marker">カート名：セミオーダーをご選択します。</span><br class="sp"><br class="pc"><span class="kome">※</span>は必須項目です</p>
             <form method="post" action="https://contact-web.form.newt.so/v1/ONvlZEQPg">
                 <div style="display: none;"><input type="text" name="wana" /></div>
                 <label class="Home_Contact_Label__hwNpu" for="name">*氏名</label>
@@ -74,19 +74,6 @@
                
                 <label class="Home_Contact_Label__hwNpu" for="exterior">外装</label>
                 <select name="exterior" class="form-control">
-                    <option value="" disabled selected>選択してください</option>
-                    <option value="ブラウン">ブラウン</option>
-                    <option value="ダークブラウン">ダークブラウン</option>
-                    <option value="ブラック">ブラック</option>
-                    <option value="グレー">グレー</option>
-                    <option value="オレンジ">オレンジ</option>
-                    <option value="グリーン">グリーン</option>
-                    <option value="ターコイズ">ターコイズ</option>
-                    <option value="ピンク">ピンク</option>
-                </select>
-
-                <label class="Home_Contact_Label__hwNpu" for="exterior_white">外装 ホワイトワックス(希望の方のみ)</label>
-                <select name="exterior_white" class="form-control" >
                     <option value="" disabled selected>選択してください</option>
                     <option value="ブラウン">ブラウン</option>
                     <option value="ダークブラウン">ダークブラウン</option>
@@ -146,8 +133,8 @@
                 </select>
 
            
-                <label class="Home_Contact_Label__hwNpu" for="kanagu">*キーフック</label>
-                <select name="kanagu" class="form-control" required="required">
+                <label class="Home_Contact_Label__hwNpu" for="keyhook">*キーフック</label>
+                <select name="keyhook" class="form-control" required="required">
                     <option value="" disabled selected>選択してください</option>
                     <option value="ゴールド">ゴールド</option>
                     <option value="シルバー">シルバー</option>
@@ -181,16 +168,16 @@
                     <option value="ターコイズ">ターコイズ</option>
                 </select>
 
-                <label class="Home_Contact_Label__hwNpu" for="kokuin">刻印模様</label>
+                <label class="Home_Contact_Label__hwNpu" for="kokuin">刻印模様（希望の方）</label>
                 <select name="kokuin" class="form-control" >
                     <option value="" disabled selected>選択してください</option>
-                    <option value="有り">有り（配置 中央ポケット）</option>
+                    <option value="有り">有り（配置:中央ポケット）</option>
                     <option value="無し">無し</option>
                 
                 </select>
 
                 <label class="Home_Contact_Label__hwNpu"  for="message">イニシャル刻印(&thinsp;希望の方 配置:中央ポケット&thinsp;)</label>
-                <textarea class="Home_Contact_Textarea__iUa5y" id="message" name="message" rows="5"  placeholder="12文字までをご記入ください.大小文字含むA~Z、数字2桁まで(０〜９、同数字不可:例22)、 記号【.＆】のみ"></textarea>
+                <textarea class="Home_Contact_Textarea__iUa5y" id="message" name="message" rows="5"  placeholder="12文字までをご記入ください。大小文字含むA~Z(*大文字は、2つまで。例:T.TTなど3つ場合は、不可)、数字2桁まで(０〜９、*同数字不可:例:22)、 記号【.＆】のみ"></textarea>
 
                 <button type="submit" class="Home_Contact_Button__sfQX_">送信する</button>
             </form>
