--- a/src/components/Pa5.astro
+++ b/src/components/Pa5.astro
@@ -3,11 +3,16 @@
         <div class="slider">
             <div class="slides">
                 <div id="slides__1" class="slide">
-                    <img loading="lazy" src="/roundpattern.webp" class="slide__img" alt="パターン">
+                    <img loading="lazy" src="/smart_order2.webp" class="slide__img" alt="パターン">
             
                 </div>
                 <div id="slides__2" class="slide">
-                    <img loading="lazy" src="/koreree.webp" class="slide__img" alt="皮サンプル">
+                    <img loading="lazy" src="/smart_order1.webp" class="slide__img" alt="皮サンプル">
+                    
+                </div>
+
+                <div id="slides__3" class="slide">
+                    <img loading="lazy" src="/smart_order3.webp" class="slide__img" alt="皮サンプル">
                     
                 </div>
 
@@ -18,10 +23,6 @@
                 <div id="slides__3" class="slide">
                     <img loading="lazy" src="/color2.webp" class="slide__img" alt=皮サンプル２"">
                   
-                </div>
-                <div id="slides__4" class="slide">
-                    <img loading="lazy" src="/patternwhite.webp" class="slide__img" alt="ホワイトワックス">
-
                 </div>
 
                 <div id="slides__5" class="slide">
@@ -75,8 +76,8 @@
     <h1 class="Home_Contact_Title__KdAFZ">SELECT</h1>
     <main class="Layout_Main__dLHqI">
         <div class="Home_Contact__nbvJ6">
-            <p class="Home_Contact_Text__3D7zy">セミオーダーは以下のフォームよりお送りください。<br class="sp"><br>送信後、決算ページに移行します。<br class="sp"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#0f0f0f" viewBox="0 0 256 256"><path d="M230.08,78.26l-31.84,26.88L208,145.33a5.46,5.46,0,0,1-8.19,5.86L164,129.66l-35.78,21.53a5.46,5.46,0,0,1-8.19-5.86l9.73-40.19L97.92,78.26a5.38,5.38,0,0,1,3.13-9.48l41.79-3.31,16.1-38.14a5.51,5.51,0,0,1,10.12,0l16.1,38.14L227,68.78A5.38,5.38,0,0,1,230.08,78.26Z" opacity="0.2"></path><path d="M239.35,70.08a13.41,13.41,0,0,0-11.77-9.28l-36.94-2.92L176.43,24.22a13.51,13.51,0,0,0-24.86,0L137.36,57.88,100.42,60.8a13.39,13.39,0,0,0-7.66,23.58l28.06,23.68-8.56,35.39a13.32,13.32,0,0,0,5.1,13.91,13.51,13.51,0,0,0,15,.69L164,139l31.65,19.06a13.54,13.54,0,0,0,15-.69,13.34,13.34,0,0,0,5.09-13.91l-8.56-35.39,28.06-23.68A13.32,13.32,0,0,0,239.35,70.08ZM193.08,99a8,8,0,0,0-2.61,8l8.28,34.21L168.13,122.8a8,8,0,0,0-8.25,0l-30.62,18.43L137.54,107a8,8,0,0,0-2.62-8L108,76.26l35.52-2.81a8,8,0,0,0,6.74-4.87L164,35.91l13.79,32.67a8,8,0,0,0,6.74,4.87l35.53,2.81Zm-105,24.18L29.66,181.66a8,8,0,0,1-11.32-11.32l58.45-58.45a8,8,0,0,1,11.32,11.32Zm10.81,49.87a8,8,0,0,1,0,11.31L45.66,237.66a8,8,0,0,1-11.32-11.32l53.27-53.26A8,8,0,0,1,98.92,173.08Zm73-1a8,8,0,0,1,0,11.32l-54.28,54.28a8,8,0,0,1-11.32-11.32l54.29-54.28A8,8,0,0,1,171.94,172.06Z"></path></svg><span class="stripe-marker">カート名：セミオーダーをご選択します。</span><br class="sp"><br class="pc"><span class="kome">※</span>は必須項目です</p>
-            <form method="post" action="https://contact-web.form.newt.so/v1/3Q7_1A1m3">
+            <p class="Home_Contact_Text__3D7zy">セミオーダーは以下のフォームよりお送りください。<br class="sp"><br>送信後、決算ページに移行します。<br class="sp"><span class="stripe-marker">カート名：セミオーダーをご選択します。</span><br class="sp"><br class="pc"><span class="kome">※</span>は必須項目です</p>
+            <form method="post" action="https://contact-web.form.newt.so/v1/Hlvrfsl1E">
                 <div style="display: none;"><input type="text" name="wana" /></div>
                 <label class="Home_Contact_Label__hwNpu" for="name">*氏名</label>
                 <input class="Home_Contact_InputText__vKPd7" id="name" required="required" name="name" placeholder="本名をご記入ください">
@@ -120,7 +121,7 @@
                     <option value="ピンク">ピンク</option>
                 </select>
             
-                <label class="Home_Contact_Label__hwNpu" for="left_pocket1">*ポケット1 右側</label>
+                <label class="Home_Contact_Label__hwNpu" for="left_pocket1">*収納ポケット</label>
                 <select name="left_pocket1" class="form-control" required="required">
                     <option value="" disabled selected>選択してください</option>
                     <option value="ブラウン">ブラウン</option>
@@ -133,8 +134,8 @@
                     <option value="ピンク">ピンク</option>
                 </select>
              
-                <label class="Home_Contact_Label__hwNpu" for="right_pocket2">*ポケット2 左側</label>
-                <select name="right_pocket2" class="form-control" required="required">
+                <label class="Home_Contact_Label__hwNpu" for="right_pocket2">*仕切り</label>
+                <select name="ight_pocket2" class="form-control" required="required">
                     <option value="" disabled selected>選択してください</option>
                     <option value="ブラウン">ブラウン</option>
                     <option value="ダークブラウン">ダークブラウン</option>
@@ -146,7 +147,7 @@
                     <option value="ピンク">ピンク</option>
                 </select>
 
-                <label class="Home_Contact_Label__hwNpu" for="mati">*マチ</label>
+                <label class="Home_Contact_Label__hwNpu" for="mati">*カードポケット</label>
                 <select name="mati" class="form-control" required="required">
                     <option value="" disabled selected>選択してください</option>
                     <option value="ブラウン">ブラウン</option>
@@ -159,7 +160,7 @@
                     <option value="ピンク">ピンク</option>
                 </select>
 
-                <label class="Home_Contact_Label__hwNpu" for="coinpockt">*小銭ポケット</label>
+                <label class="Home_Contact_Label__hwNpu" for="coinpockt">*取っ手</label>
                 <select name="coinpockt" class="form-control" required="required">
                     <option value="" disabled selected>選択してください</option>
                     <option value="ブラウン">ブラウン</option>
@@ -172,17 +173,13 @@
                     <option value="ピンク">ピンク</option>
                 </select>
             
-                <label class="Home_Contact_Label__hwNpu" for="handle">*取っ手</label>
-                <select name="handle" class="form-control" required="required">
+
+
+                <label class="Home_Contact_Label__hwNpu" for="keyhook">*キーフック</label>
+                <select name="keyhook" class="form-control" required="required">
                     <option value="" disabled selected>選択してください</option>
-                    <option value="ブラウン">ブラウン</option>
-                    <option value="ダークブラウン">ダークブラウン</option>
-                    <option value="ブラック">ブラック</option>
-                    <option value="グレー">グレー</option>
-                    <option value="オレンジ">オレンジ</option>
-                    <option value="グリーン">グリーン</option>
-                    <option value="ターコイズ">ターコイズ</option>
-                    <option value="ピンク">ピンク</option>
+                    <option value="ゴールド">ゴールド</option>
+                    <option value="シルバー">シルバー</option>
                 </select>
 
                 <label class="Home_Contact_Label__hwNpu" for="fasner_gold">ファスナー (&thinsp;ゴールド&thinsp;)</label>
@@ -237,16 +234,15 @@
                     <option value="No.8ターコイズ">No.8&thinsp;ターコイズ</option>
                 </select>
 
-                <label class="Home_Contact_Label__hwNpu" for="kokuin">刻印模様(希望の方)</label>
+                <label class="Home_Contact_Label__hwNpu" for="kokuin">刻印模様（希望の方）</label>
                 <select name="kokuin" class="form-control" >
                     <option value="" disabled selected>選択してください</option>
-                    <option value="有り（配置ポケット1 右側）">有り（配置:ポケット1 右側）</option>
-                    <option value="有り（配置ポケット2 左側）">有り（配置:ポケット2 左側）</option>
+                    <option value="有り（配置ポケット1 右側）">有り（配置：仕切り）</option>
                     <option value="無し">無し</option>
                 
                 </select>
 
-                <label class="Home_Contact_Label__hwNpu"  for="message">イニシャル刻印(&thinsp;希望の方 配置:ポケット1 右側&thinsp;)</label>
+                <label class="Home_Contact_Label__hwNpu"  for="message">イニシャル刻印(&thinsp;希望の方 配置:仕切り&thinsp;)</label>
                 <textarea class="Home_Contact_Textarea__iUa5y" id="message" name="message" rows="5"  placeholder="12文字までをご記入ください。大小文字含むA~Z(*大文字は、2つまで。例:T.TTなど3つ場合は、不可)、数字2桁まで(０〜９、*同数字不可:例:22)、 記号【.＆】のみ"></textarea>
 
 
@@ -296,7 +292,7 @@
         }
       
         async function sendRequest(formData: FormData) {
-          return await fetch('https://contact-web.form.newt.so/v1/3Q7_1A1m3', {
+          return await fetch('https://contact-web.form.newt.so/v1/Hlvrfsl1E', {
             method: 'POST',
             body: formData,
             headers: {
@@ -770,6 +766,3 @@
                 }
                 
                 </style>
-                
-        
-        
