--- a/src/components/Pa1.astro
+++ b/src/components/Pa1.astro
@@ -208,20 +208,18 @@
                     <option value="No.8ターコイズ">No.8&thinsp;ターコイズ</option>
                 </select>
 
-                <label class="Home_Contact_Label__hwNpu" for="keyhook">*金具（&thinsp;キーフック&thinsp;）</label>
-                <select name="keyhook" class="form-control" required="required">
+                <label class="Home_Contact_Label__hwNpu" for="kanagu_keyhook">*キーフック</label>
+                <select name="kanagu_keyhook" class="form-control" required="required">
                     <option value="" disabled selected>選択してください</option>
                     <option value="ゴールド">ゴールド</option>
                     <option value="シルバー">シルバー</option>
                     <option value="アンティーク">アンティーク</option>
                 </select>
 
-                <label class="Home_Contact_Label__hwNpu" for="kokuin">*刻印模様 (&thinsp;希望の方&thinsp;)</label>
+                <label class="Home_Contact_Label__hwNpu" for="kokuin">刻印模様 (&thinsp;希望の方&thinsp;)</label>
                 <select name="kokuin" class="form-control" >
                     <option value="" disabled selected>選択してください</option>
-                    <option value="有り">有り(配置:右ポケット)</option>
-                    <option value="無し">無し</option>
-                
+                    <option value="有り">有り(配置:右ポケット)</option>                
                 </select>
 
                 <label class="Home_Contact_Label__hwNpu"  for="message">イニシャル刻印 (&thinsp;希望の方 配置:右ポケット&thinsp;)</label>
