--- a/src/components/Pa2order.astro
+++ b/src/components/Pa2order.astro
@@ -129,13 +129,11 @@
                 </select>
 
 
-                <label class="Home_Contact_Label__hwNpu" for="kokuin">*刻印模様</label>
+                <label class="Home_Contact_Label__hwNpu" for="kokuin">刻印模様</label>
                 <select name="kokuin" class="form-control" required="required" >
                     <option value="" disabled selected>選択してください</option>
                     <option value="有り">有り（配置:ポケット1 右側）</option>
-                    <option value="有り">有り（配置:ポケット2 左側）</option>
-                    <option value="無し">無し</option>
-                
+                    <option value="有り">有り（配置:ポケット2 左側）</option>                
                 </select>
 
                 <label class="Home_Contact_Label__hwNpu"  for="message">イニシャル刻印(&thinsp;希望の方 配置:ポケット1 右側&thinsp;)</label>
