--- a/src/components/Pa3.astro
+++ b/src/components/Pa3.astro
@@ -133,8 +133,8 @@
                 </select>
 
            
-                <label class="Home_Contact_Label__hwNpu" for="keyhook">*キーフック</label>
-                <select name="keyhook" class="form-control" required="required">
+                <label class="Home_Contact_Label__hwNpu" for="kanagu_keyhook">*キーフック</label>
+                <select name="kanagu_keyhook" class="form-control" required="required">
                     <option value="" disabled selected>選択してください</option>
                     <option value="ゴールド">ゴールド</option>
                     <option value="シルバー">シルバー</option>
@@ -171,9 +171,7 @@
                 <label class="Home_Contact_Label__hwNpu" for="kokuin">刻印模様（希望の方）</label>
                 <select name="kokuin" class="form-control" >
                     <option value="" disabled selected>選択してください</option>
-                    <option value="有り">有り（配置:中央ポケット）</option>
-                    <option value="無し">無し</option>
-                
+                    <option value="有り">有り（配置:中央ポケット）</option>                
                 </select>
 
                 <label class="Home_Contact_Label__hwNpu"  for="message">イニシャル刻印(&thinsp;希望の方 配置:中央ポケット&thinsp;)</label>
