--- a/src/components/Pa5.astro
+++ b/src/components/Pa5.astro
@@ -175,8 +175,8 @@
             
 
 
-                <label class="Home_Contact_Label__hwNpu" for="keyhook">*キーフック</label>
-                <select name="keyhook" class="form-control" required="required">
+                <label class="Home_Contact_Label__hwNpu" for="kanagu_keyhook">*キーフック</label>
+                <select name="kanagu_keyhook" class="form-control" required="required">
                     <option value="" disabled selected>選択してください</option>
                     <option value="ゴールド">ゴールド</option>
                     <option value="シルバー">シルバー</option>
@@ -233,13 +233,11 @@
                     <option value="No.7レンガ">No.7&thinsp;レンガ</option>
                     <option value="No.8ターコイズ">No.8&thinsp;ターコイズ</option>
                 </select>
-
+ 
                 <label class="Home_Contact_Label__hwNpu" for="kokuin">刻印模様（希望の方）</label>
                 <select name="kokuin" class="form-control" >
                     <option value="" disabled selected>選択してください</option>
-                    <option value="有り（配置ポケット1 右側）">有り（配置：仕切り）</option>
-                    <option value="無し">無し</option>
-                
+                    <option value="有り（配置ポケット1 右側）">有り（配置：仕切り）</option>                
                 </select>
 
                 <label class="Home_Contact_Label__hwNpu"  for="message">イニシャル刻印(&thinsp;希望の方 配置:仕切り&thinsp;)</label>
