--- a/src/components/HomeEn.astro
+++ b/src/components/HomeEn.astro
@@ -59,7 +59,7 @@
     </a>
   </li>
   <li class="c-bannerList_node">
-    <a href="/pattern_order">
+    <a href="/semiorder">
       <div class="c-bannerList_img">
         <img src="/samale-min.webp" alt="パターンオーダーの画像">
       </div>
