--- a/src/components/LeagalEn.astro
+++ b/src/components/LeagalEn.astro
@@ -30,8 +30,8 @@
   <section class="c-pageSection">
     <h2 class="c-pageSection_title">Shipping Date</h2>
     <p class="c-pageSection_text">
-        ORDERS:<br>・Since most things are custom made, they are made to order. Depending on the amount of orders that come through from customers, wait times for an item can take 2~3 weeks until they are shipped.<br><br>SHIPPING:<br>・Shipping is free of charge<br><br>International Customers:<br>・We ship via Japan Post. We select the cheapest tracked parcel option which is unfortunately not the cheapest option, but it's the safest.
-        <br>・After the item is made it is then usually shipped within 2 days of completion.
+        ORDERS:<br>・Since most things are custom made, they are made to order. Depending on the amount of orders that come through from customers, wait times for an item can take 2~3 weeks until they are shipped.<br><br>SHIPPING:<br>・Shipping is free of charge<br><br>International Customers:<br>・We ship via Japan Post, selecting the cheapest tracked parcel option.
+        <br>・After the item is made, it is usually shipped within 2 days of completion.
     </p>
   </section>
 
