--- a/src/components/Pa1order.astro
+++ b/src/components/Pa1order.astro
@@ -403,8 +403,9 @@
                 }
                 
                 .slide:nth-of-type(even) {
-                    background-color: rgb(250, 246, 212);
+                    background-color: white;
                 }
+            
                 
                 .slide {
                     display: flex;
