--- a/src/layouts/Pa1orderEn.astro
+++ b/src/layouts/Pa1orderEn.astro
@@ -10,7 +10,7 @@ const { title,description,image } = Astro.props;
 import HeaderEn from "../components/HeaderEn.astro";
 
 
-import Pa1En from "../components/Pa1En.astro";
+import Pa1orderEn from "../components/Pa1orderEn.astro";
 import Back from "../components/Back.astro";
 import Footeren from "../components/Footeren.astro";
 
@@ -32,7 +32,7 @@ import '@fontsource-variable/open-sans';
 		<meta name="viewport" content="width=device-width,initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		
-		<title>Keycase order</title>
+		<title>Keycase Semiorder</title>
 		<meta name="description" content="Keycase Order" />
 		<meta name="format-detection" content="telephone=no" />
         <meta name="googlebot" content="noindex">
@@ -49,7 +49,7 @@ import '@fontsource-variable/open-sans';
 
         <HeaderEn />
 
-        <Pa1En />		
+        <Pa1orderEn />		
 		<Back />
 		<Footeren />
 		<slot />
