--- a/src/components/Pa2.astro
+++ b/src/components/Pa2.astro
@@ -20,7 +20,7 @@
                   
                 </div>
                 <div id="slides__4" class="slide">
-                    <img loading="lazy" src="/patternwhite.webp" class="slide__img" alt="ホワイトワックス">
+                    <img loading="lazy" src="/whitewaxx.webp" class="slide__img" alt="ホワイトワックス">
 
                 </div>
 
@@ -95,16 +95,16 @@
                     <option value="ターコイズ">ターコイズ</option>
                     <option value="ピンク">ピンク</option>
                 </select>
-                <label class="Home_Contact_Label__hwNpu" for="exterior_white">外装 ホワイトワックス (&thinsp;希望の方のみ+3,000円&thinsp;、参考画像上からの順番)</label>
+                <label class="Home_Contact_Label__hwNpu" for="exterior_white">外装 ホワイトワックス (&thinsp;希望の方のみ+3,000円&thinsp;)</label>
                 <select name="exterior_white" class="form-control" >
                     <option value="" disabled selected>選択してください</option>
-                    <option value="ブラック">ブラック</option>
-                    <option value="グレー">グレー</option>
-                    <option value="ターコイズ">ターコイズ</option>
-                    <option value="グリーン">グリーン</option>
-                    <option value="ピンク">ピンク</option>
-                    <option value="ダークブラウン">ダークブラウン</option>
-                    <option value="ブラウン">ブラウン</option>
+                    <option value="ブラウン">No.1 ブラウン</option>
+                    <option value="ダークブラウン">No.2 ダークブラウン</option>
+                    <option value="ピンク">No.3 ピンク</option>
+                    <option value="グリーン">No.4 グリーン</option>
+                    <option value="ターコイズ">No.5 ターコイズ</option>
+                    <option value="グレー">No.6 グレー</option>
+                    <option value="ブラック">No.7 ブラック</option>
                 </select>
              
                 <label class="Home_Contact_Label__hwNpu" for="interior">*内装</label>
@@ -507,8 +507,9 @@
                 }
                 
                 .slide:nth-of-type(even) {
-                    background-color: rgb(250, 246, 212);
+                    background-color: white;
                 }
+            
                 
                 .slide {
                     display: flex;
