--- a/src/components/Pa3.astro
+++ b/src/components/Pa3.astro
@@ -435,8 +435,9 @@
                 }
                 
                 .slide:nth-of-type(even) {
-                    background-color: rgb(250, 246, 212);
+                    background-color: white;
                 }
+            
                 
                 .slide {
                     display: flex;
