--- a/src/components/Fasner_wallet.astro
+++ b/src/components/Fasner_wallet.astro
@@ -51,10 +51,12 @@
               </div>
   
               <div class="c-singlePager">
-                <a href="/foldwalletEn" class="c-singlePager_arrow-prev">
+                <a href="/keycaseEn" class="c-singlePager_arrow-prev">
                 <span>Back</span>
               </a>
-             
+                  <a href="/minimam_wallet" class="c-singlePager_arrow-next">
+                <span>Next</span>
+              </a>
             </div>
 
             <style>
