--- a/src/components/KeycaseEn.astro
+++ b/src/components/KeycaseEn.astro
@@ -58,7 +58,7 @@
   
               <div class="c-singlePager">
              
-                  <a href="/roundwalletEn" class="c-singlePager_arrow-next">
+                  <a href="/fasner_wallet" class="c-singlePager_arrow-next">
                 <span>Next</span>
               </a>
             </div>
