--- a/src/components/KeyhookEn.astro
+++ b/src/components/KeyhookEn.astro
@@ -57,10 +57,10 @@
               </div>
   
               <div class="c-singlePager">
-                <a href="/roundwalletEn" class="c-singlePager_arrow-prev">
+                <a href="/minimam_wallet" class="c-singlePager_arrow-prev">
                 <span>Back</span>
               </a>
-                  <a href="/trifold_wallet" class="c-singlePager_arrow-next">
+                  <a href="/smartkey_wallet" class="c-singlePager_arrow-next">
                 <span>Next</span>
               </a>
             </div>
