--- a/src/components/Productlisten.astro
+++ b/src/components/Productlisten.astro
@@ -28,28 +28,49 @@
       </div>
     </a>
   </li>
-  
-  
-      <li class="newsList_node c-newsList_node">
-    <a href="/roundwalletEn">
+
+
+  <li class="newsList_node c-newsList_node">
+    <a href="/fasner_wallet">
       <div class="c-newsList_columnLeft">
         <div class="newsList_info c-newsList_info">
           <div class="newsList_category c-newsList_category">
-            WALLET             </div>
+           WALLET            </div>
           <time class="newsList_date c-newsList_date">
                        </time>
         </div>
         <h3 class="newsList_title c-newsList_title">
-          - 2 Card Pockets (holds 2-3 cards each)<br class="pc"><br class="sp">
-          - A pocket specifically for coins in the center <br class="pc"><br class="sp">
-          - YKK zippers , made in Japan<br class="pc"><br class="sp"> </h3>
+          - 2 Card Pockets (holds 1 cards each)<br class="pc"><br class="sp">
+          - A box-shaped coin purse<br class="pc"><br class="sp">
+          - 1 interior card slots which hold 2 or 3 cards<br class="pc"><br class="sp">
+          - 1 bill slots which holds multiple bills<br class="pc">
+        </h3>
       </div>
       <div class="newsList_img c-newsList_img">
-        <img src="/roundbody.webp">
+        <img src="/pink1.webp">
       </div>
     </a>
   </li>
   
+  <li class="newsList_node c-newsList_node">
+    <a href="/minimam_wallet">
+      <div class="c-newsList_columnLeft">
+        <div class="newsList_info c-newsList_info">
+          <div class="newsList_category c-newsList_category">
+            WALLET            </div>
+          <time class="newsList_date c-newsList_date">
+                      </time>
+        </div>
+        <h3 class="newsList_title c-newsList_title">
+          - One open pocket<br class="pc"><br class="sp">
+          - 1 exterior card pocket which hold 1 cards <br class="pc"><br class="sp">
+        </h3>
+      </div>
+      <div class="newsList_img c-newsList_img">
+        <img src="/mninibody.webp">
+      </div>
+    </a>
+  </li>
   
   <li class="newsList_node c-newsList_node">
     <a href="/keyhookEn">
@@ -70,27 +91,7 @@
       </div>
     </a>
   </li>
-  
-      <li class="newsList_node c-newsList_node">
-    <a href="/trifold_wallet">
-      <div class="c-newsList_columnLeft">
-        <div class="newsList_info c-newsList_info">
-          <div class="newsList_category c-newsList_category">
-            WALLET           </div>
-          <time class="newsList_date c-newsList_date">
-                     </time>
-        </div>
-        <h3 class="newsList_title c-newsList_title">
-          - 3 Card Pockets (holds 1 cards each)<br class="pc"><br class="sp">
-          - A box-shaped coin purse (with a card pocket on the back, can hold 2,3 cards inside)<br class="pc"><br class="sp">
-          - 1 exterior bill slots which holds multiple bills<br class="pc"><br class="sp">
-        </h3>
-      </div>
-      <div class="newsList_img c-newsList_img">
-        <img src="/three1.webp">
-      </div>
-    </a>
-  </li>
+
       <li class="newsList_node c-newsList_node">
     <a href="/smartkey_wallet">
       <div class="c-newsList_columnLeft">
@@ -112,45 +113,8 @@
       </div>
     </a>
   </li>
-  <li class="newsList_node c-newsList_node">
-    <a href="/small_wallet">
-      <div class="c-newsList_columnLeft">
-        <div class="newsList_info c-newsList_info">
-          <div class="newsList_category c-newsList_category">
-            WALLET             </div>
-          <time class="newsList_date c-newsList_date">
-                      </time>
-        </div>
-        <h3 class="newsList_title c-newsList_title">
-          - 5 Card Pockets (holds 1 cards each)<br class="pc"><br class="sp">
-          - A box-shaped coin purse (with a 1 card pocket on the back)<br class="pc"><br class="sp">
-          - 1 exterior bill slots which holds multiple bills<br class="pc"><br class="sp">   </h3>
-      </div>
-      <div class="newsList_img c-newsList_img">
-        <img src="/threewallet1-min.webp">
-      </div>
-    </a>
-  </li>
 
-      <li class="newsList_node c-newsList_node">
-    <a href="/minimam_wallet">
-      <div class="c-newsList_columnLeft">
-        <div class="newsList_info c-newsList_info">
-          <div class="newsList_category c-newsList_category">
-            WALLET            </div>
-          <time class="newsList_date c-newsList_date">
-                      </time>
-        </div>
-        <h3 class="newsList_title c-newsList_title">
-          - One open pocket<br class="pc"><br class="sp">
-          - 1 exterior card pocket which hold 1 cards <br class="pc"><br class="sp">
-        </h3>
-      </div>
-      <div class="newsList_img c-newsList_img">
-        <img src="/mninibody.webp">
-      </div>
-    </a>
-  </li>
+
   
   
   <li class="newsList_node c-newsList_node">
@@ -177,28 +141,7 @@
   </li>
   
   
-  <li class="newsList_node c-newsList_node">
-    <a href="/fasner_wallet">
-      <div class="c-newsList_columnLeft">
-        <div class="newsList_info c-newsList_info">
-          <div class="newsList_category c-newsList_category">
-           WALLET            </div>
-          <time class="newsList_date c-newsList_date">
-                       </time>
-        </div>
-        <h3 class="newsList_title c-newsList_title">
-          - 2 Card Pockets (holds 1 cards each)<br class="pc"><br class="sp">
-          - A box-shaped coin purse<br class="pc"><br class="sp">
-          - 1 interior card slots which hold 3-4 cards<br class="pc"><br class="sp">
-          - 1 bill slots which holds multiple bills<br class="pc">
-        </h3>
-      </div>
-      <div class="newsList_img c-newsList_img">
-        <img src="/pink1.webp">
-      </div>
-    </a>
-  </li>
-  
+
   
 
    
