--- a/src/components/SmartkeyEn.astro
+++ b/src/components/SmartkeyEn.astro
@@ -53,10 +53,10 @@
               </div>
   
               <div class="c-singlePager">
-                <a href="/trifold_wallet" class="c-singlePager_arrow-prev">
+                <a href="/keyhookEn" class="c-singlePager_arrow-prev">
                 <span>Back</span>
               </a>
-                  <a href="/small_wallet" class="c-singlePager_arrow-next">
+                  <a href="/foldwalletEn" class="c-singlePager_arrow-next">
                 <span>Next</span>
               </a>
             </div>
