--- a/src/components/FoldwalletEn.astro
+++ b/src/components/FoldwalletEn.astro
@@ -55,12 +55,10 @@
                 </div>
 
                 <div class="c-singlePager">
-                    <a href="/minimam_wallet" class="c-singlePager_arrow-prev">
+                    <a href="/smartkey_wallet" class="c-singlePager_arrow-prev">
                     <span>Back</span>
                   </a>
-                      <a href="/fasner_wallet" class="c-singlePager_arrow-next">
-                    <span>Next</span>
-                  </a>
+                 
                 </div>
               </div>
   
