--- a/src/components/MinimamEn.astro
+++ b/src/components/MinimamEn.astro
@@ -51,10 +51,10 @@
               </div>
   
               <div class="c-singlePager">
-                <a href="/small_wallet" class="c-singlePager_arrow-prev">
+                <a href="/fasner_wallet" class="c-singlePager_arrow-prev">
                 <span>Back</span>
               </a>
-                  <a href="/foldwalletEn" class="c-singlePager_arrow-next">
+                  <a href="/keyhookEn" class="c-singlePager_arrow-next">
                 <span>Next</span>
               </a>
             </div>
