--- a/src/components/Pa2orderEn.astro
+++ b/src/components/Pa2orderEn.astro
@@ -73,6 +73,8 @@
             <br class="sp"><br class="sp"><br class="pc"><br class="pc">For delivery, please allow approximately 2 to 3 weeks, including the time needed for sourcing materials before shipment.
             <br class="pc"><a href="/teams-of-setvice/" class="animate-link" >Read more<svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="#003EA2" viewBox="0 0 256 256"><path d="M132,136v64a12,12,0,0,1-24,0V165L48.49,224.49a12,12,0,0,1-17-17L91,148H56a12,12,0,0,1,0-24h64A12,12,0,0,1,132,136ZM208,28H80A20,20,0,0,0,60,48V92a12,12,0,0,0,24,0V52H204V172H164a12,12,0,0,0,0,24h44a20,20,0,0,0,20-20V48A20,20,0,0,0,208,28Z"></path></svg></a>
           
+            <br class="sp"><br class="sp"><br class="pc"><br class="pc">After submitting the form, you will be redirected to the payment screen. On that page, you can select your preferred currency from a button located in the bottom right corner. If your local currency is available, please choose it.
+            
         </p>
     </div>
 </div>
