--- a/src/components/Pa2orderEn.astro
+++ b/src/components/Pa2orderEn.astro
@@ -153,14 +153,14 @@
                         <option value="ダークブラウン">Drak Brown</option>
                         <option value="ブラック">Black</option>
                         <option value="グレー">Gray</option>
-                        <option value="オレンジ">Orange</option>
+                        <option value="オレンジ">Orange</option> 
                         <option value="グリーン">Green</option>
                         <option value="ターコイズ">Turquoise</option>
                         <option value="ピンク">Pink</option>
                     </select>
                  
-                    <label class="Home_Contact_Label__hwNpu" for="Second_card_slot">*Second card slot</label>
-                    <select name="Second_card_slot" class="form-control" required="required">
+                    <label class="Home_Contact_Label__hwNpu" for="second_card_slot">*Second card slot</label>
+                    <select name="second_card_slot" class="form-control" required="required">
                         <option value="" disabled selected>Please select</option>
                         <option value="ブラウン">Brown</option>
                         <option value="ダークブラウン">Drak Brown</option>
@@ -279,13 +279,6 @@
                     <option value="No.8ターコイズ">No.8&thinsp; Turquoise</option>
                 </select>
 
-                <label class="Home_Contact_Label__hwNpu" for="kanagu_hook">*Hardware（&thinsp;Key hook&thinsp;）</label>
-                <select name="kanagu_hook" class="form-control" required="required">
-                    <option value="" disabled selected>Please select</option>
-                    <option value="ゴールド">Gold</option>
-                    <option value="シルバー">Silver</option>
-                    <option value="アンティーク">Antique</option>
-                </select>
 
                 <label class="Home_Contact_Label__hwNpu" for="kokuin">Engraving Pattern(&thinsp;For those who prefer, the placement is on the first card slot.&thinsp;)</label>
                 <select name="kokuin" class="form-control" >
