--- a/src/components/Pa5orderEn.astro
+++ b/src/components/Pa5orderEn.astro
@@ -3,17 +3,17 @@
         <div class="slider">
             <div class="slides">
                 <div id="slides__1" class="slide">
-                 <img loading="lazy" src="/fasmnerpat3.webp" class="slide__img" alt="パターン">
+                    <img loading="lazy" src="/keypat1.webp" class="slide__img" alt="パターン">
                     <a class="slide__next" title="Next"></a>
                 </div>
                 <div id="slides__2" class="slide">
-                    <img loading="lazy" src="/fasnerpatt1.webp" class="slide__img" alt="皮サンプル">
+                    <img loading="lazy" src="/keypa2.webp" class="slide__img" alt="皮サンプル">
                   
                 </div>
 
 
                 <div id="slides__3" class="slide">
-                    <img loading="lazy" src="/fasnerprt2.webp" class="slide__img" alt="皮サンプル">
+                    <img loading="lazy" src="/keyoae3.webp" class="slide__img" alt="皮サンプル">
                   
             
                 </div>
@@ -84,7 +84,7 @@
     <main class="Layout_Main__dLHqI">
         <div class="Home_Contact__nbvJ6">
             <p class="Home_Contact_Text__3D7zy">Please submit your semi-custom order using the form below.<br class="pc">After submission, you will be redirected to the payment page.<br class="sp"><br class="pc"><span class="stripe-marker"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#0f0f0f" viewBox="0 0 256 256"><path d="M230.08,78.26l-31.84,26.88L208,145.33a5.46,5.46,0,0,1-8.19,5.86L164,129.66l-35.78,21.53a5.46,5.46,0,0,1-8.19-5.86l9.73-40.19L97.92,78.26a5.38,5.38,0,0,1,3.13-9.48l41.79-3.31,16.1-38.14a5.51,5.51,0,0,1,10.12,0l16.1,38.14L227,68.78A5.38,5.38,0,0,1,230.08,78.26Z" opacity="0.2"></path><path d="M239.35,70.08a13.41,13.41,0,0,0-11.77-9.28l-36.94-2.92L176.43,24.22a13.51,13.51,0,0,0-24.86,0L137.36,57.88,100.42,60.8a13.39,13.39,0,0,0-7.66,23.58l28.06,23.68-8.56,35.39a13.32,13.32,0,0,0,5.1,13.91,13.51,13.51,0,0,0,15,.69L164,139l31.65,19.06a13.54,13.54,0,0,0,15-.69,13.34,13.34,0,0,0,5.09-13.91l-8.56-35.39,28.06-23.68A13.32,13.32,0,0,0,239.35,70.08ZM193.08,99a8,8,0,0,0-2.61,8l8.28,34.21L168.13,122.8a8,8,0,0,0-8.25,0l-30.62,18.43L137.54,107a8,8,0,0,0-2.62-8L108,76.26l35.52-2.81a8,8,0,0,0,6.74-4.87L164,35.91l13.79,32.67a8,8,0,0,0,6.74,4.87l35.53,2.81Zm-105,24.18L29.66,181.66a8,8,0,0,1-11.32-11.32l58.45-58.45a8,8,0,0,1,11.32,11.32Zm10.81,49.87a8,8,0,0,1,0,11.31L45.66,237.66a8,8,0,0,1-11.32-11.32l53.27-53.26A8,8,0,0,1,98.92,173.08Zm73-1a8,8,0,0,1,0,11.32l-54.28,54.28a8,8,0,0,1-11.32-11.32l54.29-54.28A8,8,0,0,1,171.94,172.06Z"></path></svg>Cart Name:Please select the semi-custom option.</span>  <br class="sp"><br class="pc"><span class="kome">*</span>denotes mandatory fields.</p>
-            <form method="post" action="https://contact-web.form.newt.so/v1/dJCqV3Z0M">
+            <form method="post" action="https://contact-web.form.newt.so/v1/DRHVe_XG0">
                 <div style="display: none;"><input type="text" name="name" /></div>
                 <label class="Home_Contact_Label__hwNpu" for="name">*Name</label>
                 <input class="Home_Contact_InputText__vKPd7" id="name" required="required" name="name" placeholder="Please enter your full name.">
@@ -117,9 +117,9 @@
                         <option value="グレー">No.6 Gray</option>
                         <option value="ブラック">No.7 Black</option>
                     </select>
-                 
-                    <label class="Home_Contact_Label__hwNpu" for="front_interior">*Front Interior</label>
-                    <select name="front_interior" class="form-control" required="required">
+                  
+                    <label class="Home_Contact_Label__hwNpu" for="interior">*Interior</label>
+                    <select name="interior" class="form-control" required="required">
                         <option value="" disabled selected>Please select</option>
                         <option value="ブラウン">Brown</option>
                         <option value="ダークブラウン">Drak Brown</option>
@@ -132,8 +132,8 @@
                         
                     </select>
 
-                    <label class="Home_Contact_Label__hwNpu" for="box_coin">*Box-type coin purse</label>
-                    <select name="box_coin" class="form-control" required="required">
+                    <label class="Home_Contact_Label__hwNpu" for="smart_key_pocket">*Smart key pocket</label>
+                    <select name="smart_key_pocket" class="form-control" required="required">
                         <option value="" disabled selected>Please select</option>
                         <option value="ブラウン">Brown</option>
                         <option value="ダークブラウン">Drak Brown</option>
@@ -146,8 +146,8 @@
                         
                     </select>
                 
-                    <label class="Home_Contact_Label__hwNpu" for="first_card_slot">*First card slot</label>
-                    <select name="first_card_slot" class="form-control" required="required">
+                    <label class="Home_Contact_Label__hwNpu" for="divider">*Divider</label>
+                    <select name="divider" class="form-control" required="required">
                         <option value="" disabled selected>Please select</option>
                         <option value="ブラウン">Brown</option>
                         <option value="ダークブラウン">Drak Brown</option>
@@ -159,8 +159,8 @@
                         <option value="ピンク">Pink</option>
                     </select>
                  
-                    <label class="Home_Contact_Label__hwNpu" for="second_card_slot">*Second card slot</label>
-                    <select name="second_card_slot" class="form-control" required="required">
+                    <label class="Home_Contact_Label__hwNpu" for="utility_pocket">*Utility pocket</label>
+                    <select name="utility_pocket" class="form-control" required="required">
                         <option value="" disabled selected>Please select</option>
                         <option value="ブラウン">Brown</option>
                         <option value="ダークブラウン">Drak Brown</option>
@@ -171,46 +171,7 @@
                         <option value="ターコイズ">Turquoise</option>
                         <option value="ピンク">Pink</option>
                     </select>
-
-                    <label class="Home_Contact_Label__hwNpu" for="interior_lining">*Interior lining</label>
-                    <select name="interior_lining" class="form-control" required="required">
-                        <option value="" disabled selected>Please select</option>
-                        <option value="ブラウン">Brown</option>
-                        <option value="ダークブラウン">Drak Brown</option>
-                        <option value="ブラック">Black</option>
-                        <option value="グレー">Gray</option>
-                        <option value="オレンジ">Orange</option>
-                        <option value="グリーン">Green</option>
-                        <option value="ターコイズ">Turquoise</option>
-                        <option value="ピンク">Pink</option>
-                    </select>
-
-                    <label class="Home_Contact_Label__hwNpu" for="right_side_card_pocket">*Right side card pocket</label>
-                    <select name="right_side_card_pocket" class="form-control" required="required">
-                        <option value="" disabled selected>Please select</option>
-                        <option value="ブラウン">Brown</option>
-                        <option value="ダークブラウン">Drak Brown</option>
-                        <option value="ブラック">Black</option>
-                        <option value="グレー">Gray</option>
-                        <option value="オレンジ">Orange</option>
-                        <option value="グリーン">Green</option>
-                        <option value="ターコイズ">Turquoise</option>
-                        <option value="ピンク">Pink</option>
-                    </select>
-
-                    <label class="Home_Contact_Label__hwNpu" for="left_side_card_pocket">*Left side card pocket</label>
-                    <select name="left_side_card_pocket" class="form-control" required="required">
-                        <option value="" disabled selected>Please select</option>
-                        <option value="ブラウン">Brown</option>
-                        <option value="ダークブラウン">Drak Brown</option>
-                        <option value="ブラック">Black</option>
-                        <option value="グレー">Gray</option>
-                        <option value="オレンジ">Orange</option>
-                        <option value="グリーン">Green</option>
-                        <option value="ターコイズ">Turquoise</option>
-                        <option value="ピンク">Pink</option>
-                    </select>
-                 
+                
                     <label class="Home_Contact_Label__hwNpu" for="handle">*Handle</label>
                     <select name="handle" class="form-control" required="required">
                         <option value="" disabled selected>Please select</option>
@@ -279,14 +240,21 @@
                     <option value="No.8ターコイズ">No.8&thinsp; Turquoise</option>
                 </select>
 
+                <label class="Home_Contact_Label__hwNpu" for="kanagu_hook">*Hardware（&thinsp;Key hook&thinsp;）</label>
+                <select name="kanagu_hook" class="form-control" required="required">
+                    <option value="" disabled selected>Please select</option>
+                    <option value="ゴールド">Gold</option>
+                    <option value="シルバー">Silver</option>
+                    <option value="アンティーク">Antique</option>
+                </select>
 
-                <label class="Home_Contact_Label__hwNpu" for="kokuin">Engraving Pattern(&thinsp;For those who prefer, the placement is on the first card slot.&thinsp;)</label>
+                <label class="Home_Contact_Label__hwNpu" for="kokuin">Engraving Pattern(&thinsp;For those who prefer, the placement is on the divider.&thinsp;)</label>
                 <select name="kokuin" class="form-control" >
                     <option value="" disabled selected>Please select</option>
                     <option value="有り">Necessary</option>
                 </select>
 
-                <label class="Home_Contact_Label__hwNpu"  for="message">Initial Engraving(&thinsp;For those who prefer, the placement is on the first card slot.&thinsp;)</label>
+                <label class="Home_Contact_Label__hwNpu"  for="message">Initial Engraving(&thinsp;For those who prefer, the placement is on the divider.&thinsp;)</label>
                 <textarea class="Home_Contact_Textarea__iUa5y" id="message" name="message" rows="5"  placeholder="Please enter up to 12 characters. Uppercase and lowercase letters (A-Z), up to 2 digits (0-9, no repeating digits, e.g., 22 not allowed), and symbols [.&] only."></textarea>
                 <button type="submit" class="Home_Contact_Button__sfQX_">Submit</button>
             </form>
@@ -337,7 +305,7 @@
         }
       
         async function sendRequest(formData: FormData) {
-          return await fetch('https://contact-web.form.newt.so/v1/dJCqV3Z0M', {
+          return await fetch('https://contact-web.form.newt.so/v1/DRHVe_XG0', {
             method: 'POST',
             body: formData,
             headers: {
