--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -11,12 +11,12 @@
     <form method="post" action="https://contact-web.form.newt.so/v1/cASqqzwCC">
         <label class="Home_Contact_Label__hwNpu" for="name">氏名 (Your name) </label>
       <input  class="Home_Contact_InputText__vKPd7"  required="required" name="name"  placeholder="本名をご記入ください" />
-      <label  class="Home_Contact_Label__hwNpu"  for="email">メールアドレス</label>
+      <label  class="Home_Contact_Label__hwNpu"  for="email">メールアドレス(Email address )</label>
       <input class="Home_Contact_InputText__vKPd7" id="email" type="email" required="required" name="email" placeholder="info@example.com">    
 
       <label class="Home_Contact_Label__hwNpu"  for="message">お問い合わせ内容 (Inquiry content)</label>
       <textarea class="Home_Contact_Textarea__iUa5y" id="message" name="message" rows="5" required="required"> </textarea>
-      <button type="submit" class="Home_Contact_Button__sfQX_">送信する</button>
+      <button type="submit" class="Home_Contact_Button__sfQX_">送信する(Submit)</button>
     </form>
     <br>
     <p class="recaptcha_policy">This site is protected by reCAPTCHA and the Google<a href="https://policies.google.com/privacy" target="_blank">Privacy Policy</a> and <a href="https://policies.google.com/terms" target="_blank">Terms of Service</a> apply.</p>
