--- a/src/components/HeaderEn.astro
+++ b/src/components/HeaderEn.astro
@@ -9,6 +9,8 @@
         <li><a href="/homeEn">Home</a></li>
         <li><a href="/aboutEn">Quality</a></li>
         <li><a href="/productlistEn">Products</a></li>
+        <li><a href="https://pircamabui.com/">JP</a></li>
+
       
         
   
