--- a/src/components/Note.astro
+++ b/src/components/Note.astro
@@ -57,7 +57,7 @@
                 </div>
 
                 <div class="c-singlePager">
-                    <a href="/smallwallet" class="c-singlePager_arrow-prev">
+                    <a href="/smartkey" class="c-singlePager_arrow-prev">
                     <span>Back</span>
                   </a>
                       <a href="/minimam" class="c-singlePager_arrow-next">
