--- a/src/components/Smartkey.astro
+++ b/src/components/Smartkey.astro
@@ -56,7 +56,7 @@
                 <a href="/threewallet" class="c-singlePager_arrow-prev">
                 <span>Back</span>
               </a>
-                  <a href="/smallwallet" class="c-singlePager_arrow-next">
+                  <a href="/note" class="c-singlePager_arrow-next">
                 <span>Next</span>
               </a>
             </div>
