--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -40,6 +40,13 @@ import Back from "../components/Back.astro";
 		<link rel="apple-touch-icon" href="/king.png" sizes="180x180">
 
 		<meta name="thumbnail" content="/wokrd-min.jpg" />
+
+
+		<meta property="og:url" content="https://sshokinawa.com/contact/">
+		<meta property="og:type" content="website">
+		<meta property="og:title" content="お問い合わせ・ご予約">
+		<meta property="og:description" content="サンクチュアリに関するお問い合わせやご予約は、こちらのページから">
+		<meta property="og:image" content="/top.webp">
 	
 	<!-- Google tag (gtag.js) -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-R7FD49YWE3"></script>
