--- a/src/components/HomeEn.astro
+++ b/src/components/HomeEn.astro
@@ -24,7 +24,8 @@
           <li><a href="/homeEn">Home</a></li>
           <li><a href="/aboutEn">Quality</a></li>
           <li><a href="/productlistEn">Products</a></li>
-        
+          <li><a href="https://pircamabui.com/">JP</a></li>
+
         </ul>
       </div>
     </nav>
